--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"@types/minio": "^7.0.17",
 		"@types/node": "^20.4.5",
 		"@types/node-cron": "^3.0.7",
-		"@types/sanitize-html": "^2.9.0",
 		"@typescript-eslint/eslint-plugin": "^6.2.0",
 		"@typescript-eslint/parser": "^6.2.0",
 		"classnames": "^2.3.2",
@@ -70,6 +69,7 @@
 		"next-auth": "^4.22.3",
 		"node-cache": "^5.1.2",
 		"svelte-modals": "^1.2.1",
+		"xss": "^1.0.14",
 		"zod": "^3.20.6"
 	}
 }
